Changed kernel for h3 to mainline

--- a/config/sources/sun8i.conf
+++ b/config/sources/sun8i.conf
@@ -9,8 +9,8 @@ case $BRANCH in
 	;;
 
 	dev)
-	LINUXKERNEL='https://github.com/wens/linux'
-	KERNELBRANCH='h3-emac'
+	LINUXKERNEL='https://github.com/torvalds/linux.git'
+	KERNELBRANCH='master'
 	LINUXSOURCE='linux-sun8i-mainline'
 	;;
 esac
